# hermes-project-worker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hermes_plugin/: __init__.py
src/hermes_plugin/project_worker/: __init__.py  client.py  commands.py  formatters.py  plugin.yaml  tools.py
src/hermes_project_worker/: api_client.py  api_server.py  approvals.py  cli.py  hermes_runner.py  launchd.py  manager.py  mcp_server.py  models.py  operator_client.py  policy.py  prompting.py  queue.py  repo.py  result_parser.py  store.py
src/hermes_project_worker/webhooks/: __init__.py  github.py  server.py
tests/: test_api_server.py  test_approvals.py  test_cli.py  test_entrypoint.py  test_github_webhooks.py  test_hermes_runner.py  test_launchd.py  test_manager.py  test_mcp_server.py  test_models.py  test_plugin_client.py  test_plugin_commands.py  test_plugin_tools.py  test_policy.py  test_prompting.py  test_queue.py  test_repo.py  test_result_parser.py  test_store.py
